--- a/layouts/partials/sidebar-data.html
+++ b/layouts/partials/sidebar-data.html
@@ -1,9 +1,9 @@
 <div class="bg-light-gray pa3 nested-list-reset nested-copy-line-height nested-links">
-  <p class="f5 b mb3 ttc">{{ i18n "origin" }}</p>
+  <p class="f5 b mb3 ttc">{{ i18n "origins" }}</p>
   <ul class="pa0 list">
-    {{ range .Params.origin }}
+    {{ range .Params.origins }}
       <li class="mb2">
-        <a href="{{ "/origin/" | relLangURL }}{{ . | urlize }}">
+        <a href="{{ "/origins/" | relLangURL }}{{ . | urlize }}">
           <span class="ttc">{{ i18n . }}</span>
         </a>
       </li>
