--- a/layouts/brands/single.html
+++ b/layouts/brands/single.html
@@ -49,6 +49,7 @@
     </header>
     <div class="nested-copy-line-height lh-copy {{ $.Param "post_content_classes"  | default "serif"}} f4 nested-links nested-img {{ $.Param "text_color" | default "mid-gray" }} pr4-l w-two-thirds-l">
       {{- .Content -}}
+      {{- partial "subsidiaries.html" . -}}
       {{- partial "tags.html" . -}}
       <div class="mt6 instapaper_ignoref">
       {{ if .Site.DisqusShortname }}
