--- a/layouts/brands/single.html
+++ b/layouts/brands/single.html
@@ -48,6 +48,10 @@
       {{ end }}
     </header>
     <div class="nested-copy-line-height lh-copy {{ $.Param "post_content_classes"  | default "serif"}} f4 nested-links nested-img {{ $.Param "text_color" | default "mid-gray" }} pr4-l w-two-thirds-l">
+      {{ if .Params.stub }}
+      {{- partial "stub.html" . -}}
+      {{ end }}
+
       {{- .Content -}}
       {{- partial "subsidiaries.html" . -}}
       {{- partial "tags.html" . -}}
