--- a/layouts/_default/taxonomy.html
+++ b/layouts/_default/taxonomy.html
@@ -1,18 +1,16 @@
 {{ define "main" }}
-<article class="cf pa3 pa4-m pa4-l">
-  <div
-    class="center mw8 nested-copy-line-height lh-copy f4 nested-links nested-img mid-gray"
-  >
-    {{ .Content }}
-  </div>
-</article>
-<div class="mw8 center">
-  <section class="flex-ns flex-wrap justify-around mt5">
-    {{ range .Pages }}
-    <div class="relative w-100 mb4 bg-white">
-      {{ partial "summary.html" . }}
+  <article class="cf pa3 pa4-m pa4-l">
+    <div class="center mw8 nested-copy-line-height lh-copy f4 nested-links nested-img mid-gray">
+      {{ .Content }}
     </div>
-    {{ end }}
-  </section>
-</div>
+  </article>
+  <div class="mw8 center">    
+    <section class="flex-ns flex-wrap justify-around mt5">
+      {{ range  .Pages }}
+        <div class="relative w-100  mb4 bg-white">
+          {{ partial "summary.html" . }}
+        </div>
+      {{ end }}
+    </section>
+  </div>
 {{ end }}
