--- a/layouts/_default/terms.html
+++ b/layouts/_default/terms.html
@@ -1,22 +1,24 @@
-{{ define "main" }} {{ $data := .Data }}
-<article class="cf pa3 pa4-m pa4-l">
-  <div
-    class="measure-wide-l center f4 lh-copy nested-copy-line-height nested-links nested-img mid-gray"
-  >
-    {{ .Content }}
+{{ define "main" }}
+    {{ $data := .Data }}
+  <article class="cf pa3 pa4-m pa4-l">
+    <div class="measure-wide-l center f4 lh-copy nested-copy-line-height nested-links nested-img mid-gray">
+      {{ .Content }}
+    </div>
+  </article>
+  <div class="mw8 center">
+    <section class="ph4">
+      {{ range $key, $value := .Data.Terms }}
+        {{ with $.Site.GetPage $.Data.Singular $key }}
+        <h2 class="f1">
+          <a href="{{ .RelPermalink }}" class="link blue hover-black">
+            {{ .Title }}
+          </a>
+        </h2>
+        {{ end }}
+        {{ range $value.Pages }}
+          {{ partial "summary.html" . }}
+        {{ end }}
+      {{ end }}
+    </section>
   </div>
-</article>
-<div class="mw8 center">
-  <section class="ph4">
-    {{ range $key, $value := .Data.Terms }} {{ with $.Site.GetPage
-    $.Data.Singular $key }}
-    <h2 class="f1">
-      <a href="{{ .RelPermalink }}" class="link blue hover-black">
-        {{ .Title }}
-      </a>
-    </h2>
-    {{ end }} {{ range $value.Pages }} {{ partial "summary.html" . }} {{ end }}
-    {{ end }}
-  </section>
-</div>
 {{ end }}
