--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,7 +4,7 @@
   <article class="cf ph3 ph5-l pv3 pv4-l f4 tc-l center measure-wide lh-copy mid-gray">
     {{ .Content }}
   </article>
-  <div class="ph3 ph4-ns w-100 w-70-ns center">
+  <div class="ph3 ph4-ns pv2 w-100 w-70-ns center">
     <p class="f3 b mb1 ttc"></p>
     <h2 class="flex-none ttc">
       {{ i18n "categories" }}
@@ -17,7 +17,7 @@
       {{ end }}
     {{ end }}
   </div>
-  <div class="ph3 ph4-ns w-100 w-70-ns center">
+  <div class="ph3 ph4-ns pv2 w-100 w-70-ns center">
     <h2 class="flex-none ttc">
       {{ i18n "origins" }}
     </h2>
