--- a/layouts/partials/site-footer.html
+++ b/layouts/partials/site-footer.html
@@ -1,21 +1,36 @@
 <footer class="{{ .Site.Params.background_color_class | default "bg-black" }} bottom-0 w-100 pa3" role="contentinfo">
-  <div class="flex justify-between f4 fw4 white-70 dn dib-ns pv2 ph3">
-    &copy; {{ now.Format "2006"}} {{ with .Site.Copyright | default .Site.Title }} {{ . | safeHTML }} {{ end }}
-    —
-    {{ with .Site.Params.contentLicense }}
-    Content: <a class="white-70 hover-white" href="{{ .url }}" target="_blank">{{ .text }}</a>,
-    {{ end }}
-    {{ with .Site.Params.codeLicense }}
-    Code: <a class="white-70 hover-white" href="{{ .url }}" target="_blank">{{ .text }}</a>, unless otherwise noted.
-    {{ end }}
+  <div class="flex-l justify-between items-center">
+    <div class="f4 fw4 white-70 dn dib-ns pv2 ph3 w-60">
+      &copy; {{ now.Format "2006"}} {{ with .Site.Copyright | default .Site.Title }} {{ . | safeHTML }} {{ end }}
+      —
+      {{ with .Site.Params.contentLicense }}
+      Content: <a class="white-70 hover-white" href="{{ .url }}" target="_blank">{{ .text }}</a>,
+      {{ end }}
+      {{ with .Site.Params.codeLicense }}
+      Code: <a class="white-70 hover-white" href="{{ .url }}" target="_blank">{{ .text }}</a>, unless otherwise noted.
+      {{ end }}
+
+      <p class="f6 fw6 pt0">
+        View the
+        {{ with .Site.Params.repository }}
+        <a class="white-70 hover-white" href="{{ .url }}" target="_blank">source</a>
+        {{ end }}
+        for this site.
+        <a class="white-70 hover-white" href="{{ref . "privacy"}}">Privacy</a>.
+      </p>
+    </div>
+    <div class="f4 fw4 white-70 dn dib-ns pv2 ph3">
+      <ul class="p10 mr3 f6 f5-ns">
+        <li class="list fw4 dib pr3">
+          <a class="white-70 hover-white no-underline" href="{{ref . "about"}}">About</a>
+        </li>
+        <li class="list fw4 dib pr3">
+          <a class="white-70 hover-white no-underline" href="{{ref . "contribute"}}">Contribute</a>
+        </li>
+        <li class="list fw4 dib pr3">
+          <a class="white-70 hover-white no-underline" href="{{ref . "faq"}}">FAQ</a>
+        </li>
+      </ul>
+    </div>
   </div>
-  <div class="justify-between f6 fw6 white-70 ph3">
-    View the
-    {{ with .Site.Params.repository }}
-    <a class="white-70 hover-white" href="{{ .url }}" target="_blank">source</a>
-    {{ end }}
-    for this site.
-    <a class="white-70 hover-white" href="{{ref . "privacy"}}" target="_blank">Privacy</a>.
-  </div>
-  <div>{{ partial "social-follow.html" . }}</div>
 </footer>
