--- a/layouts/index.html
+++ b/layouts/index.html
@@ -6,28 +6,30 @@
   </article>
   <div class="ph3 ph4-ns pv2 w-100 w-70-ns center">
     <p class="f3 b mb1 ttc"></p>
-    <h2 class="flex-none ttc">
-      {{ i18n "categories" }}
-    </h2>
+    <h2 class="flex-none ttc pb2 mb0">{{ i18n "categories" }}</h2>
+    <p class="pb2 mv0">{{ i18n "categories-description" }}</p>
+    <div class="f5">
     {{ range $key, $value := .Site.Taxonomies.categories }}
       {{ with $.GetPage ( print "/categories/" $key) }}
-        <a class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1" href="{{ .RelPermalink }}">
+        <a class="ba b--moon-gray bg-light-gray br2 color-inherit dib hover-bg-moon-gray link mt2 ph2 pv1" href="{{ .RelPermalink }}">
           <span class="ttc">{{- .Title -}}</span>
         </a>
       {{ end }}
     {{ end }}
+    </div>
   </div>
   <div class="ph3 ph4-ns pv2 w-100 w-70-ns center">
-    <h2 class="flex-none ttc">
-      {{ i18n "origins" }}
-    </h2>
+    <h2 class="flex-none ttc pb2 mb0">{{ i18n "origins" }}</h2>
+    <p class="pb2 mv0">{{ i18n "origins-description" }}</p>
+    <div class="f5">
     {{ range $key, $value := .Site.Taxonomies.origins }}
       {{ with $.GetPage ( print "/origins/" $key) }}
-        <a class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1" href="{{ .RelPermalink }}">
+        <a class="ba b--moon-gray bg-light-gray br2 color-inherit dib hover-bg-moon-gray link mt2 ph2 pv1" href="{{ .RelPermalink }}">
           <span class="ttc">{{- .Title -}}</span>
         </a>
       {{ end }}
     {{ end }}
+    </div>
   </div>
   {{/* Define a section to pull recent posts from. For Hugo 0.20 this will default to the section with the most number of pages. */}}
   {{ $mainSections := .Site.Params.mainSections | default (slice "post") }}
