--- a/layouts/partials/site-footer.html
+++ b/layouts/partials/site-footer.html
@@ -1,6 +1,6 @@
 <footer class="{{ .Site.Params.background_color_class | default "bg-black" }} bottom-0 w-100 pa3" role="contentinfo">
-  <div class="flex-l justify-between items-center">
-    <div class="f5 fw4 white-70 dn dib-ns pv2 ph3 w-60">
+  <div class="flex justify-between items-center">
+    <div class="f5 fw4 white-70 pv2 ph3 w-60">
       &copy; {{ now.Format "2006"}} {{ with .Site.Copyright | default .Site.Title }} {{ . | safeHTML }} {{ end }}
       —
       {{ with .Site.Params.contentLicense }}
@@ -19,7 +19,7 @@
         <a class="white-70 hover-white" href="{{ref . "privacy"}}">Privacy</a>.
       </p>
     </div>
-    <div class="f4 fw4 white-70 dn dib-ns pv2 ph3">
+    <div class="f4 fw4 white-70 pv2 ph3">
       <ul class="p10 mr3 f6 f5-ns">
         <li class="list fw4 dib pr3">
           <a class="white-70 hover-white no-underline" href="{{ref . "about"}}">About</a>
