--- a/layouts/partials/external-link.html
+++ b/layouts/partials/external-link.html
@@ -1,5 +1,5 @@
 {{ if .url }}
-<a rel="noreferrer" href="{{- .url -}}" target="_blank">
+<a href="{{- .url -}}" target="_blank">
   <span class="{{ .Scratch.Get "classes" }}">{{- .text | default .url -}}</span>
 </a>
 {{ else }}
