--- a/layouts/index.html
+++ b/layouts/index.html
@@ -8,32 +8,36 @@
     <p class="f3 b mb1 ttc"></p>
     <h2 class="flex-none ttc pb2 mb0">{{ i18n "categories" }}</h2>
     <p class="pb2 mv0">{{ i18n "categories-description" }}</p>
-    <div class="f5">
+    <ul class="f5 ph0 mh0">
     {{ range $key, $value := .Site.Taxonomies.categories }}
       {{ with $.GetPage ( print "/categories/" $key) }}
         {{ if not .Params.excludeFromListing }}
-        <a class="ba b--moon-gray bg-light-gray br2 color-inherit dib hover-bg-moon-gray link mt2 ph2 pv1" href="{{ .RelPermalink }}">
-          <span class="ttc">{{- .Title -}}</span>
-        </a>
+        <li class="dib mr1 mb2">
+          <a class="b db pa2 link dim dark-gray ba b--black-20" href="{{ .RelPermalink }}">
+            <span class="ttc">{{- .Title -}}</span>
+          </a>
+        </li>
         {{ end }}
       {{ end }}
     {{ end }}
-    </div>
+    </ul>
   </div>
   <div class="ph3 ph4-ns pv2 w-100 w-70-ns center">
     <h2 class="flex-none ttc pb2 mb0">{{ i18n "origins" }}</h2>
     <p class="pb2 mv0">{{ i18n "origins-description" }}</p>
-    <div class="f5">
+    <ul class="f5 ph0 mh0">
     {{ range $key, $value := .Site.Taxonomies.origins }}
       {{ with $.GetPage ( print "/origins/" $key) }}
         {{ if not .Params.excludeFromListing }}
-        <a class="ba b--moon-gray bg-light-gray br2 color-inherit dib hover-bg-moon-gray link mt2 ph2 pv1" href="{{ .RelPermalink }}">
-          <span class="ttc">{{- .Title -}}</span>
-        </a>
+        <li class="dib mr1 mb2">
+          <a class="b db pa2 link dim dark-gray ba b--black-20" href="{{ .RelPermalink }}">
+            <span class="ttc">{{- .Title -}}</span>
+          </a>
+        </li>
         {{ end }}
       {{ end }}
     {{ end }}
-    </div>
+      </ul>
   </div>
   {{/* Define a section to pull recent posts from. For Hugo 0.20 this will default to the section with the most number of pages. */}}
   {{ $mainSections := .Site.Params.mainSections | default (slice "post") }}
