add comment to icons

--- a/layouts/partials/site-icons.html
+++ b/layouts/partials/site-icons.html
@@ -1,3 +1,10 @@
+{{/*
+  The fonts in this file comes from Font Awesome, but are re-hosted here to have
+  all content served from a single origin.
+
+  We only use their free icons, which are offered under a CC-BY-4.0 license;
+  see: https://fontawesome.com/license/free
+*/}}
 <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" style="display:none">
   <symbol
       id="fa-exclamation-circle"
