--- a/layouts/partials/site-icons.html
+++ b/layouts/partials/site-icons.html
@@ -5,6 +5,7 @@
   We only use their free icons, which are offered under a CC-BY-4.0 license;
   see: https://fontawesome.com/license/free
 */}}
+<!-- Fonts provided by Font Awesome; https://fontawesome.com/license/free -->
 <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" style="display:none">
   <symbol
       id="fa-exclamation-circle"
