--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -4,7 +4,7 @@
       {{- .Content -}}
     </section>
     <section class="flex-ns flex-wrap justify-around mt5">
-      {{ range .Paginator.Pages.ByTitle }}
+      {{ range (.Paginate  .Pages.ByTitle).Pages }}
         <div class="relative w-100 w-30-l mb4 bg-white">
           {{- partial "summary.html" . -}}
         </div>
