--- a/layouts/partials/head-additions.html
+++ b/layouts/partials/head-additions.html
@@ -1,2 +1,4 @@
+{{ if not .Site.Params.referrer }}
 <meta name="referrer" content="no-referrer">
+{{ end }}
 <link rel="shortcut icon" type="image/png" href="favicon.png">
